# automated-data-collection

./: .env  .gitignore  Cassastion.py  CassastionMultiThread.py  Dockerfile  README.md  convert.py  input.csv  legaldoc.py  output.json  pyproject.toml  requirements.txt  schema.json
font/amir/: Amiri-Regular.pkl
syncwf/: cassastion.py  cmf.py  constant.py  download_pdf_jurisprudence.py  jort.py  jurisprudence.py  pdf.py  util.py  watermarkremover.py
syncwf/watermark/: img.py
